tests/parse-fail/fn_at_missing_ret.fl.0.exp
Error: fn_at_missing_ret.fl(3,22): Expected return type arrow, but got ';' 
pub mod fn_missing_ret {
    pub struct FnMissingRet {
        pub f : fn@();
                     ^ 
    }
}
